tests/cases/should_fail/double_hash/case.stderr
error: expected a name here
 --> $DIR/case.hash:1:7
1 |   k := ##naughty_intrinsic();
  |         ^ here
